--- a/HTML/links/style.css
+++ b/HTML/links/style.css
@@ -123,4 +123,32 @@ body {
 
 /* fourthl ink */
 
+.four {
+	z-index: 1;
+}
+
+.four::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 0;
+	width: 100%;
+	background-color: #fff;
+	z-index: -1;
+}
+
+.four:hover {
+	color: black;
+}
+
+.four:hover::after {
+	height: 100%;
+}
+
+
+
 /* fifth link */
+
+
+
