--- a/HTML/buttons/buttonAnimations/style.css
+++ b/HTML/buttons/buttonAnimations/style.css
@@ -120,7 +120,15 @@ span {
 
 /* Third button */
 
+.hmm {
+	border: none;
+	transition: 0.5s;
+}
 
+.hmm:hover {
+	box-shadow: 2px 3px 0 0 rgba(255, 255, 255, 0.8),
+		inset 11px 6px 10px rgba(0, 0, 0, 0.2);
+}
 
 /* Fourth button */
 
