--- a/HTML/buttons/buttonAnimations/style.css
+++ b/HTML/buttons/buttonAnimations/style.css
@@ -132,4 +132,44 @@ span {
 
 /* Fourth button */
 
+.border {
+	border-radius: 0;
+	overflow: visible;
+	transform: 0.8s;
+}
+
+.border::before,
+.border::after {
+	width: 100%;
+	height: 100%;
+}
+
+.border::after {
+	bottom: 0;
+	right: 0;
+}
+
+.border::before {
+	top: 0;
+	left: 0;
+}
+
+.border:hover {
+    border: 1px solid transparent;
+    color: #13bb4b;
+}
+
+.border:hover::after {
+	bottom: -10px;
+	right: -10px;
+	border-bottom: 5px solid #13bb4b;
+	border-right: 5px solid #13bb4b;
+}
+
+.border:hover::before {
+	top: -10px;
+	left: -10px;
+	border-top: 5px solid #13bb4b;
+	border-left: 5px solid #13bb4b;
+}
 /* Fifth button */
