--- a/HTML/buttons/buttonAnimations/style.css
+++ b/HTML/buttons/buttonAnimations/style.css
@@ -155,8 +155,8 @@ span {
 }
 
 .border:hover {
-    border: 1px solid transparent;
-    color: #13bb4b;
+	border: 1px solid transparent;
+	color: #13bb4b;
 }
 
 .border:hover::after {
@@ -172,4 +172,27 @@ span {
 	border-top: 5px solid #13bb4b;
 	border-left: 5px solid #13bb4b;
 }
+
 /* Fifth button */
+
+.glass {
+    visibility: visible;
+}
+
+.glass::before {
+	top: -30px;
+	left: -130px;
+	height: 160%;
+	width: 100px;
+	background-image: linear-gradient(
+		-90deg,
+		rgba(255, 255, 255, 0.3),
+		rgba(255, 255, 255, 0)
+	);
+    transform: rotate(20deg);
+}
+
+.glass:hover::before {
+    left: 130%;
+}
+
