--- a/HTML/FlexBoxPage/sass/_mixins.scss
+++ b/HTML/FlexBoxPage/sass/_mixins.scss
@@ -6,3 +6,10 @@
 	background-color: $pure-white;
 	transition: width 0.3s;
 }
+
+@mixin heroImages($image) {
+    background-image: $blue-gradient, url($image);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
