--- a/HTML/FlexBoxPage/sass/main.scss
+++ b/HTML/FlexBoxPage/sass/main.scss
@@ -73,6 +73,63 @@ body {
 	}
 }
 
+.nav {
+	position: fixed;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	transform: translateX(100%);
+	transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+	background-image: $blue-gradient-solid;
+	z-index: 100;
+
+	&--active {
+		transform: translateX(0);
+	}
+
+	&__item {
+		position: relative;
+		display: block;
+		margin: 0.5em 0;
+		padding: 0.5em 2em;
+		font-size: 2.8rem;
+		color: $pure-white;
+		text-decoration: none;
+
+		&::before {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 3px;
+			height: 100%;
+			transform: scaleY(0);
+			background-color: $pure-white;
+			transition: transform 0.3s;
+			content: '';
+		}
+
+		&:hover::before {
+			transform: scaleY(1);
+		}
+	}
+}
+
+@keyframes navItemsAnimation {
+    from {
+        transform: translateX(200%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+.nav-items-animation {
+    animation: navItemsAnimation 1s both;
+}
+
 // Header
 
 .header {
@@ -86,32 +143,71 @@ body {
 	text-align: center;
 	color: $pure-white;
 	@include heroImages('/HTML/FlexBoxPage/img/header-mini.jpg');
-    background-attachment: scroll;
+	background-attachment: scroll;
 
-    &__title {
-        font-family: 'Dancing Script', cursive;
-        font-size: 4.8rem;
-        font-weight: 300;
-    }
+	&__title {
+		font-family: 'Dancing Script', cursive;
+		font-size: 4.8rem;
+		font-weight: 300;
+	}
 
-    &__text {
-        font-size: 1.4rem;
-    }
+	&__text {
+		font-size: 1.4rem;
+	}
 
-    &__btn {
-        margin-top: 2em;
-        padding: 0.8em 1.6em;
-        font-size: 1.4rem;
-        background-color: $pure-white;
-        border: none;
-        border-radius: 8px;
-        color: $dark;
-        text-decoration: none;
-        text-transform: uppercase;
-        cursor: pointer;
+	&__btn {
+		margin-top: 2em;
+		padding: 0.8em 1.6em;
+		font-size: 1.4rem;
+		background-color: $pure-white;
+		border: none;
+		border-radius: 8px;
+		color: $dark;
+		text-decoration: none;
+		text-transform: uppercase;
+		cursor: pointer;
 
-        &::before {
-            background-color: $light-white;
-        }
-    }
+		&::before {
+			background-color: $light-white;
+		}
+	}
+}
+
+// MEDIA
+
+@media (min-width: 768px) {
+	.white-block {
+		height: 50px;
+		width: 45%;
+	}
+
+	.header {
+		&__title {
+			font-size: 6.6rem;
+		}
+
+		&__text {
+			font-size: 2.2rem;
+		}
+
+		&__btn {
+			font-size: 1.6rem;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.burger-btn {
+		top: 50px;
+		right: 50px;
+	}
+
+	.header {
+		background-image: $blue-gradient,
+			url('/HTML/FlexBoxPage/img/header-mini.jpg');
+
+		&__title {
+			font-size: 10rem;
+		}
+	}
 }
