--- a/GRID/style.css
+++ b/GRID/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
+    margin: 50px;
+    color: #ffffff;
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
     background-color: #333;
@@ -17,9 +17,21 @@ body {
 
 .wrapper {
     display: grid;
-    width: 1440px;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 100px 100px 500px 100px;
+    color: #000000;
+}
+
+.auto-fit {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.auto-fill {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+h3 {
+    margin: 2em 0 .5em;
+    font-size: 2rem;
+    text-transform: uppercase;
 }
 
 .item {
@@ -28,37 +40,22 @@ body {
     justify-content: center;
     padding: 10px 20px;
     text-transform: uppercase;
+    border: 1px solid black;
 }
 
-nav {
-    background-color: tomato;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-header {
-    background-color: gold;
-    grid-column: 1/3;
-    grid-row: 2/3;
-}
-
-main {
+.blue {
     background-color: cornflowerblue;
-    grid-column: 1/2;
-    grid-row: 3/4;
 }
 
-aside {
+.purple {
     background-color: slateblue;
-    grid-column: 2/3;
-    grid-row: 3/4;
+
 }
 
-footer {
+.green {
     background-color: greenyellow;
-    grid-column: 1/3;
-    grid-row: 4/5;
 }
 
+.gold {
+    background-color: gold;
+}
