--- a/HTML/GRIDWebsite/SASS/main.scss
+++ b/HTML/GRIDWebsite/SASS/main.scss
@@ -1,12 +1,12 @@
-@use './colors' as c;
+@use './colors' as *;
 @use './animations' as a;
 
 *,
 *::before,
 *::after {
 	box-sizing: border-box;
-	padding: 0;
 	margin: 0;
+	padding: 0;
 }
 
 html {
@@ -17,15 +17,15 @@ html {
 body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.6rem;
-	color: c.$white;
-	background-color: #333;
+	color: $white;
+	background-color: $dark;
 }
 
-.company-name {
+h1.company-name {
 	margin-bottom: 0.5em;
 	font-size: 3rem;
 	font-family: 'Cinzel', serif;
-	color: c.$gold;
+	color: $gold;
 }
 
 .wrapper {
@@ -34,8 +34,30 @@ body {
 	width: 100%;
 }
 
-// header
+.section-title {
+	position: relative;
+	margin: 0 auto 2em;
+	font-size: 3.2rem;
+	color: $gold;
+	font-weight: 200;
+	width: fit-content;
 
+	&::before {
+		position: absolute;
+		bottom: -0.1em;
+		left: 0;
+		width: 40px;
+		height: 2px;
+		background-color: $gold;
+		content: '';
+	}
+
+	span {
+		font-weight: 900;
+	}
+}
+
+// header
 .header {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -109,23 +131,64 @@ body {
 	&-inner,
 	&-inner::before,
 	&-inner::after {
-		background-color: c.$white;
+		background-color: $white;
 		z-index: 500;
 	}
 }
 
-.hamburger {
-	position: absolute;
-	top: 3em;
-	left: 1em;
-	transform: translateY(-50%);
-	z-index: 500;
+.nav {
+	&-mobile {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		background-color: $white;
+		transform: translateX(-102%);
+		transition: transform 0.3s;
+		z-index: 10;
 
-	&-inner,
-	&-inner::before,
-	&-inner::after {
-		background-color: c.$white;
-		z-index: 500;
+		&--active {
+			transform: translateX(0);
+		}
+	}
+
+	&-desktop {
+		display: none;
+	}
+
+	&__link {
+		position: relative;
+		display: inline-block;
+		margin: 0.5em;
+		padding: 0.5em;
+		font-size: 2.3rem;
+		color: $darker;
+		text-transform: uppercase;
+		text-decoration: none;
+		transition: color 0.3s;
+
+		&:hover {
+			color: $gold;
+			&::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				border: 1px solid $gold;
+				opacity: 0;
+
+				&:hover::before {
+					animation: pulse 1s;
+				}
+			}
+		}
 	}
 }
 
