--- a/HTML/GRIDWebsite/SASS/_large.scss
+++ b/HTML/GRIDWebsite/SASS/_large.scss
@@ -1,4 +1,17 @@
 @media (min-width: 992px) {
+
+	.section-title {
+		font-size: 4.8rem;
+
+		&::before {
+			height: 4px;
+		}
+	}
+
+	h1.company-name {
+		font-size: 6rem;
+	}
+
 	.header {
 		grid-template-rows: auto repeat(2, 1fr);
 
@@ -58,6 +71,10 @@
 		}
 	}
 
+	.hamburger {
+		display: none;
+	}
+
 	.nav {
 		grid-column: 1/2;
 		grid-row: 1/2;
@@ -70,6 +87,29 @@
 
 		&__link {
 			color: $white;
+			&::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				border: 1px solid $gold;
+				opacity: 0;
+			}
+			&:hover::before {
+				animation: pulse 1s;
+			}
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	.header {
+		&__text {
+			p {
+				font-size: 2.2rem;
+			}
 		}
 	}
 }
