--- a/HTML/GRIDWebsite/SASS/main.scss
+++ b/HTML/GRIDWebsite/SASS/main.scss
@@ -174,21 +174,133 @@ h1.company-name {
 
 		&:hover {
 			color: $gold;
-			&::before {
-				content: '';
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				border: 1px solid $gold;
-				opacity: 0;
-
-				&:hover::before {
-					animation: pulse 1s;
-				}
-			}
 		}
+	}
+}
+
+// Main
+
+// cards
+
+.cards {
+	background-color: $darker;
+	overflow: hidden;
+
+	&__box {
+		display: grid;
+		grid-template-columns: repeat(9, 1fr);
+		gap: 2em;
+		padding: 6em 2em;
+	}
+
+	&__card {
+		position: relative;
+		display: grid;
+		justify-items: center;
+		padding: 3em;
+		text-align: center;
+		border: 1px solid transparent;
+		border-radius: 8px;
+		background-color: $dark;
+		transition: background-color 0.3s, border 0.3s;
+		z-index: 5;
+
+		&:hover {
+			background-color: $darker;
+			border: 1px solid $gold;
+			z-index: 1;
+		}
+
+		&::before {
+			position: absolute;
+			content: '';
+			width: 100%;
+			height: 100%;
+			border: 1px solid $gold;
+			border-radius: 8px;
+			opacity: 0;
+		}
+		&:hover::before {
+			animation: pulse 1s;
+		}
+
+		img {
+			margin-bottom: 1em;
+			width: 60px;
+		}
+
+		h3 {
+			text-transform: uppercase;
+			margin-bottom: 0.6em;
+		}
+		&--one {
+			grid-row: 1/2;
+			grid-column: 1/-1;
+		}
+		&--two {
+			grid-row: 2/3;
+			grid-column: 1/-1;
+		}
+		&--three {
+			grid-row: 3/4;
+			grid-column: 1/-1;
+		}
+	}
+}
+
+// info
+
+.info {
+	position: relative;
+	display: grid;
+	grid-template-areas:
+		'title title title'
+		'box box box'
+		'box box box';
+	padding: 6em 2em;
+
+	&__title {
+		grid-area: title;
+	}
+
+	&__boxes {
+		grid-area: box;
+	}
+
+	&__box-img {
+		width: 100%;
+		object-fit: cover;
+		filter: sepia();
+	}
+
+	&__box-title {
+		margin: 0.3em 0;
+		font-size: 2.6rem;
+		color: $gold;
+		font-weight: 200;
+	}
+
+	&__box-text {
+		margin-bottom: 0.5em;
+	}
+
+	&__box-link {
+		display: block;
+		margin-bottom: 2em;
+		font-weight: bold;
+		color: $gold;
+		text-align: right;
+		text-decoration: none;
+		transition: color .3s;
+		
+		&:hover {
+			color: $darkgold;
+		}
+	}
+	
+
+	&__bg-icon {
+		display: none;
 	}
 }
 
