--- a/HTML/GRIDWebsite/SASS/_small.scss
+++ b/HTML/GRIDWebsite/SASS/_small.scss
@@ -29,6 +29,27 @@
                 width: 20%;
                 animation: rotate-right 160s infinite linear
             }
+
+            &--two {
+                bottom: 10%;
+                left: 10%;
+                width: 30%;
+                animation: rotate-left 140s infinite linear
+            }
+
+            &--three {
+                top: 30%;
+                left: 20%;
+                width: 50%;
+                animation: rotate-right 160s infinite linear
+            }
+
+            &--four {
+                top: 55%;
+                left: -10%;
+                width: 15%;
+                animation: rotate-right 140s infinite linear
+            }
 		}
 	}
 }
